--- a/02-构造析构赋值运算.md
+++ b/02-构造析构赋值运算.md
@@ -94,18 +94,159 @@ public:
 TimeKeeper* ptk = getTimeKeeper();
 delete ptk;
 ```
+为什么基类的析构函数要用虚析构函数？因为C++明白指出，当derived class对象经由一个base class指针被删除，而该base class带有一个non-virtual析构函数，其结果未有定义，实际执行时通常发生的是对象的derived成分没被销毁，这就是诡异的“局部销毁”对象，可形成资源泄露，是在调试器上浪费许多时间的绝佳途径。
+
+因此，任何class只要带有virtual函数都几乎确定也应该有一个virtual析构函数。
+
+但是如果class中不含有virtual函数，也就是它并不意图被用作一个base class，这时候另其析构函数是virtual往往是个馊主意,因为实现virtual函数，肯定是要有vptr要维护的，这就无形之间增加了成本。
+
+```c++
+class Point{
+public:
+    Point(int xCoord, int yCoord);
+    ~Point();
+private:
+    int x,y;
+};
+```
+
+`std::string`是不包含虚析构函数的，同样的`STL容器如vector，list，set等也没有virtual析构函数`，所以轻易不要继承这些类。
 
 
+为你希望它成为抽象的那个class声明一个pure virtual 析构函数：
+```c++
+class AWOV{
+public:
+    virtual ~AWOV() = 0;    //声明pure virtual析构函数的定义
+};
+```
 ### 8. Prevent exceptions from leaving destructors. (别让异常逃离析构函数)
 
+```c++
+class Widget{
+public:
+    ~Widget(){...}  //假设这个可能有异常
+};
+void doSomething(){
+    std::vector<Widget>v;
+}   //v在函数结束自动销毁
+```
+上述代码中，当vector v被销毁，它有责任销毁其内部含有的所有Widgets，假设v内含有10个Widgets，当析构第一个元素期间，有个异常被抛出，这会影响后续的析构。`C++非常不喜欢析构函数吐出异常`。
+
+假设下面的一个场景，你负责数据库的连接：
+
+```c++
+class DBConnection{
+public:
+    static DBConnection create();
+    
+    void close();
+};
+class DBConn{   //这个class用来管理DBConnection对象
+public:
+    ~DBConn(){  //确保数据库连接总是会被关闭
+        db.close();
+    }
+private:
+    DBConnection db;
+};
+DBConn dbc(DBConnection::create());
+```
+要给客户手动close的机会，这样相当于把责任“推”给了客户。
+
+```c++
+class DBConn{
+public:
+    void close(){   //供客户使用的新函数
+        db.close();
+        closed = true;
+    }
+    ~DBConn(){
+        if(!closed){
+            try{
+                db.close();
+            }
+            catch(...){
+                //制作运转记录，记下对close的调用失败
+            }
+        }
+    }
+}
+```
 
 ### 9. Never call virtual functions during construction or destruction. (绝不在构造和析构过程中调用virtual函数)
 
+```c++
+class Transaction{  //所有交易的base class
+public:
+    Transaction();
+    virtual void logTransaction() const = 0;    //做出一份因类型不同而不同的日志记录
+};
+Transaction::Transaction(){
+    logTransaction();
+}
+
+class BuyTransaction : public Transaction{
+public:
+    virtual void logTransaction() const;
+};
+class SellTransaction : public Transaction{
+public:
+    virtual void logTransaction() const;
+};
+
+BuyTransaction b;
+```
+
+上述代码中`BuyTransaction b;`这行语句被执行时，首先会调用Transaction的构造函数，这样就调用到virtual 函数logTransaction，这时候被调用的logTransaction是Tran内的版本，不是BuyTransaction内的版本。
+
+通俗点来讲，在base class构造期间，virtual函数不是virtual函数。
 
 ### 10. Have assignment operators return a reference to *this. (令operator= 返回一个 reference to *this)
 
+为了实现“连锁赋值”，赋值操作符必须返回一个reference指向操作符的左侧实参。
 
+```c++
+class Widget{
+public:
+    Widget& operator+=(const Widget& rhs){
+        ...
+        return *this;
+    }
+    Widget& operator=(int rhs){
+        ...
+        return *this;
+    }
+    ...
+}
+```
 ### 11. Handle assignment to self in operator=. (在operator=中处理“自我赋值”)
 
+```c++
+class Bitmap{...};
+class Widget{
+    ...
+private:
+    Bitmap* pb;
+};
+
+Widget&
+Widget::operator=(cosnt Widget& rhs){
+    delete pb;
+    pb = new Bitmap(*rhs.pb);
+    return *this;
+}
+```
+
+上述代码中，在自我赋值中有问题，operator=函数内的*this和rhs有可能是同一个对象。为避免此类情况出现问题：
+
+```c++
+Widget& Widget::operator=(const Widget& rhs){
+    if(this == &rhs) return *this;
+    delete pb;
+    pb = new Bitmap(*rhs.pb);
+    return *this;
+}
+```
 
 ### 12. Copy all parts of an object. (复制对象时勿忘其每一个成分)
