--- a/03-资源管理.md
+++ b/03-资源管理.md
@@ -1,11 +1,172 @@
 ## Resource Management（资源管理）
 
+在C++中，内存只是你必须管理的众多资源之一，其他常见的资源还包括文件描述器(file descriptors)、互斥锁(mutex locks)、图形界面中的字型和笔刷、数据库连接、以及网络sockets。
+
 ### 13. Use Object to manage resources. (以对象管理资源)
+
+```c++
+class Investment{};
+
+void f(){
+    Investment* pInv = createInvestment();  //调用factory函数
+    delete pInv;    //释放pInv所指对象
+}
+```
+以上代码有可能会发生一些意外情况，比如提早return、提早continue，导致delete被忽略，进而导致内存泄露。所以我们希望把资源放进对象内，这样就可以以依赖C++的“析构函数自动调用机制”确保资源被释放。智能指针应势而生。
+
+先来看auto_ptr(非智能指针)：
+```c++
+void f(){
+    std::auto_ptr<Investment> pInv(createInvestment());
+    //调用factory函数
+    //一如既往地使用pInv
+    //经由auto_ptr的析构函数自动删除pInv
+}
+```
+- 获得资源后立刻放进管理对象内。在上述代码中，`createInvestment`返回的资源被当做其管理者auto_ptr的初值。实际上“以对象管理资源”的观念常被称为“资源取得时机便是初始化时机”`RAII`。
+- 管理对象运用析构函数确保资源被释放。不论控制流如何离开区块，一旦对象被销毁，其析构函数自然会被自动调用，于是资源被释放。
+
+auto_ptrs有一个不寻常的性质：若通过copy构造函数或copy assignment操作符复制它们，它们会变成null，而复制所得的指针将取得资源的唯一拥有权。
+
+```c++
+std::auto_ptr<Investment> pInv1(createInvestment());    //pInv1指向createInvestment返回物
+std::auto_ptr<Investment> pInv2(pInv1); //现在pInv2指向对象，pInv1设为null
+pInv1 = pInv2;  //现在pInv1指向对象，pInv2设为null
+```
+因此可以看到auto_ptrs并非管理动态分配资源的神兵利器，尤其是STL容器要求其元素发挥“正常的”复制行为，因此这些容器容不得auto_ptr。
+
+
+智能指针`RCSP`，持续追踪共有多少对象指向某笔资源，并在无人指向它时自动删除该资源。RCSPs提供的行为类似于垃圾回收。
+
+```c++
+void f(){
+    std::tr1::shared_ptr<Investment> pInv1(createInvestment());
+    std:L:tr1::shared_ptr<Investment> pInv2(pInv1); //pInv1和pInv2指向同一个对象
+    pInv1 = pInv2;
+}   //pInv1和pInv2被销毁，它们所指的对象也就被自动销毁
+```
 
 ### 14. Think carefully about copying behaviour in resource-managing classes. (在资源管理类中小心copying行为)
 
+并非所有的资源都是heap-based，对于这种资源而言，像auto_ptr和tr1::shared_ptr这样的智能指针往往不适合作为资源掌管者，所以有时候需要建立自己的资源管理类。
+
+```c++
+class Lock{
+public:
+    explicit Lock(Mutex* pm) : mutexPtr(pm){
+        lock(mutexPtr);
+    }
+    ~Lock(){unlock(mutexPtr);}
+private:
+    Mutex * mutexPtr;
+};
+```
+
+以上代码无法确定Lock复制的时候发生什么，面对复制，RAII classes要实现reference-counting copying行为。
+
+```c++
+class Lock{
+public:
+    explicit Lock(Mutex* pm) : mutexPtr(pm, unlock){    //以某个Mutex初始化shared_ptr，并以unlock函数为删除器
+        lock(mutexPtr.get());   //返回内部的原始指针(的复件)
+    }
+private:
+    std::tr1::shared_ptr<Mutex> mutexPtr; //使用shared_ptr替换raw pointer
+}
+```
+上述代码不需要为Lock class声明析构函数。
+
+理由：
+- class析构函数(无论是编译器生成的，或用户自定的)会自动调用其non-static成员变量(本例为mutexPtr)的析构函数。而mutexPtr的析构函数会在互斥器的引用次数为0时自动调用tr1::shared_ptr的删除器。
+
+
 ### 15. Provide access to raw resources in resource-managing classes. (在资源管理类中提供对原始资源的访问)
 
+对原始资源的访问可能经由显示转换或隐式转换。一般而言，显示转换比较安全，但隐式转换对客户比较方便。
+
+如下是显示转换：
+
+```c++
+FontHandle getFont();
+
+void releaseFont(Fonthandle fh);
+
+class Font{
+public:
+    explicit Font(FontHandle fh) : f(fh){}
+    ~Font(){releaseFont(f);}
+    FontHandle get() const{return f};
+private:
+    FontHandle f;
+}
+
+void changeFontSize(FontHandle f, int newSize);
+Font f(getFont());
+int newFontSize;
+changeFontSize(f.get(),newFontSize); //明白地将Font转换为FontHandle
+```
+
+如下是隐式转换：
+
+```c++
+class Font{
+public:
+    operator FontHandle() const{return f;}
+};
+
+Font f(getFont());
+int newFontSize;
+changeFontSize(f,newFontSize);
+```
 ### 16. Use the same form in corresponding uses of new and delete. (成对使用new和delete时要采用相同形式)
 
+```c++
+std::string* stringArray = new std::string[100];
+delete stringArray;
+```
+
+上述代码有问题，程序行为不明确。
+
+当使用`new`时，会有两件事情发生：
+- 内存被分配出来 (通过名为operator new的函数)
+- 针对此内存会有一个(或更多)构造函数被调用
+
+当使用delete时，会有两件事情发生：
+- 针对此内存会有一个(或更多)析构函数被调用
+- 内存释放 (通过名为operator delete的函数)
+
+当你对着一个指针使用delete，唯一能够让delete知道内存中是否存在一个“数组大小记录”的办法就是：由你来告诉它。
+
+```c++
+std::string* stringPtr1 = new std::string;
+std::string* stringPtr2 = new std::string[100];
+
+delete stringPtr1;
+delete []stringPtr2;
+```
 ### 17. Store newed objects in smart pointers in standalone statements. (以独立语句将newed对象置入智能指针)
+
+```c++
+int priority();
+void processWidget(std::tr1::shared_ptr<Widget> pw, int priority);
+
+processWidget(new Widget, priority());  //不能通过编译，tr1::shared_ptr构造函数需要一个原始指针，但该构造函数是个explicit构造函数，无法进行隐式转换
+
+processWidget(std::tr1::shared_ptr<Widget>(new Widget), priority());
+//1.调用priority
+//2.执行new Widget
+//3.调用tr1::shared_ptr构造函数
+```
+
+上述代码中3个步骤，C++编译器以什么样的次序去完成是个不确定的事情，C++编译器有可能这么干：
+
+1. 执行“new Widget"
+2. 调用priority
+3. 调用tr1::shared_ptr构造函数
+
+如果对priority的调用导致异常，这时候"new Widget"返回的指针将会遗失，因为它尚未被置入tr1::shared_ptr内，后者是我们期盼用来防卫资源泄露的武器。避免这类问题的方法很简单：使用分离语句。
+
+```c++
+std::tr1::shared_ptr<Widget> pw(new Widget);
+processWidget(pw, priority());
+```
