简单的operator new 及operator delete重载

--- a/04-设计与声明.md
+++ b/04-设计与声明.md
@@ -2,16 +2,190 @@
 
 ## 18. Make interfaces easy to use correctly and hard to use incorrectly. (让接口容易被正确使用，不易被误用)
 
+比如以下类：
+
+```c++
+class Date{
+public:
+    Date(int month, int day, int year);
+}
+```
+上述接口乍看之下通情达理，但没有应对年月日顺序不一致的情况，改进如下：
+
+```c++
+struct Day{
+    explicit Day(int d) : val(d){}
+    int val;
+};
+struct Month{
+    explicit Month(int m) : val(m){}
+    int val;
+};
+struct Year{
+    explicit Year(int y) : val(y){}
+    int val;
+};
+
+class Data{
+public:
+    Date(const Month& m, const Day& d, const Year& y);
+};
+
+Date d(30,3,1995);  //错误
+Date d(Day(30), Month(3), Year(1995));  //错误
+Date d(Month(3), Day(30), Year(1995));  //OK
+```
+
+上述接口也有缺陷，没有显示月份，比如一年只有12个月，万一客户写出界了怎么办？改进如下：
+
+```c++
+class Month{
+public:
+    static Month Jan() {return Month(1);}
+    static Month Feb() {return Month(2);}
+    ...
+    static Month Dec() {return Month(12);}
+    ...
+private:
+    explicit Month(int m);
+    ...
+};
+Date d(Month::Mar(), Day(30), Year(1995));
+```
+
+
+
+```c++
+std::tr1::shared_ptr<Investment> pInv(static_cast<Investment*>(0),getRidOfInvestment);
+```
+`tr1::shared_ptr`有一个特别好的性质：
+
+- 它会自动使用它的“每个指针专属的删除器”，因而消除另一个潜在的客户错误，所谓的“cross-DLL problem”。这个问题发生于“对象在动态连接程序库(DLL)中被new创建，却在另一个DLL内被delete销毁”。在许多平台上，这一类“跨DLL之new/delete成对运用”会导致运行期错误。tr1::shared_ptr没有这个问题，因为它缺省的删除器是来自“tr1::shared_ptr诞生所在的那个DLL”的delete。
+
+举个例子，假设`Stock`派生自`Investment`而`createInvestment`实现如下：
+
+```c++
+std::tr1::shared_ptr<Investment> createInvestment(){
+    return std::tr1::shared_ptr<Investment>(new Stock);
+}
+```
+返回的那个`tr1::shared_ptr`可被传递给任何其他DLLs，无需在意“cross-DLL problem”。`这个指向Stock的tr1::shared_ptrs会追踪记录“当Stock的引用次数变成0时该调用的那个DLL's delete”`。
+
 ## 19. Treat class design as type design. (设计class犹如设计type)
+
+如果能够设计出至少像C++内置类型一样好的用户自定义(user-defined) classes, 一切汗水便都值得。
 
 ## 20. Prefer pass-by-reference-to-const to pass-by-value. (宁以pass-by-reference-to-const替换pass-by-value)
 
+缺省情况下C++以by value 方式传递对象至函数。除非你另外指定，否则函数参数都是以实际参数的复件(副本)为初值，而调用端所获得的亦是函数返回值的一个复件。这些复件(副本)系由对象的copy构造函数产出，这可能使得pass-by-value成为昂贵的操作。
+
+```c++
+class Person{
+public:
+    Person();
+    virtual ~Person();
+private:
+    std::string name;
+    std::string address;
+};
+
+class Student : public Person{
+public:
+    Student();
+    ~Student();
+private:
+    std::string schoolName;
+    std::string schoolAddress;
+};
+
+
+bool validateStudent(Student s);
+Student plato;
+bool platoIsOK = validateStudent(plato);
+//Student的copy构造函数会被调用，以plato为蓝本将s初始化。
+//同样明显地，当validateStudent返回s会被销毁。
+//对此函数而言，参数的传递成本是“一次Student copy 构造函数调用，加上一次Student析构函数调用”。
+//然而仔细看看Student类和Person类，就会发现string的构造一共还有4次，所以消耗很大。
+```
+因此我们要用：
+
+```c++
+bool validateStudent(const Student& s);
+```
+以by reference方式传递参数也可以避免slicing问题，如下例子：
+
+```c++
+class Window{
+public:
+    std::string name() const;
+    virtual void display() const;
+};
+class WindowWWithScrollBars : public Window{
+public:
+    virtual void display() const;
+};
+
+void printNameAndDisplay(Window w){ //不正确！参数可能被切割
+    std::cout<<w.name();
+    w.display();
+}
+
+WindowWithScrollBars wwsb;
+printNameAndDisplay(wwsb);
+```
+
+以上代码中，参数w会被构造成为一个Window对象，它是passed by value，而造成wwsb之所以是个WindowWithScrollBars对象的所有特化信息都会被切除。在printNameAndDisplay函数内不论传递过来的对象原本是什么类型，参数w就像一个Window对象。因此在printNameAndDisplay内调用display调用的总是Window::display，绝不会是WindowWithScrollBars::display。
+
+解决切割(slicing)问题的办法，就是以by-reference-to-const的方式传递w：
+
+```c++
+void printNameAndDisplay(const Window& w){
+    std::cout<<w.name();
+    w.display();
+}
+```
+
 ## 21. Don't try to return a reference when you must return an object. (必须返回对象时，别妄想返回其reference)
+
+
+```c++
+class Rational{
+public:
+    Rational(int number = 0, int denominator = 1);
+private:
+    int n,d;
+    friend const Rational operator* (const Rational& lhs, const Rational& rhs);
+};
+```
+
+
+
 
 ## 22. Declare data memebers private. (将成员变量声明为private)
 
+
+
+
+
+
+
 ## 23. Prefer non-member non-friend functions to memeber functions. (宁以non-member、non-friend替换member函数)
+
+
+
+
+
 
 ## 24. Declare non-member functions when type conversions should apply to all parameters. (若所有参数皆需类型转换，请为此采用non-member函数)
 
+
+
+
+
+
+
 ## 25. Consider support for a non-throwing swap. (考虑写出一个不抛出异常的swap函数)
+
+
+
+
